<resources>
    <string name="app_name">AlexRadio</string>
    <string name="play_button_string">Play</string>
    <string name="todo">TODO</string>
    <string name="option_switch_text4">Switch4</string>
    <string name="option_switch_text3">Switch3</string>
    <string name="option_switch_text2">Switch2</string>
    <string name="option_switch_text1">Switch</string>
    <string name="size_of_switches">50dp</string>
    <string name="PlayRadioText">PlayingRadio</string>
    <string name="WARNING_CHANNEL">Важные уведомления!</string>
    <string name="hello">Hello</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>