<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_settings_view">

    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="39dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/settings_icon" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/optionSwitch4"
        android:layout_width="@dimen/width_switches"
        android:layout_height="@dimen/height_switches"
        android:layout_below="@+id/optionSwitch3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/option_switch_text4" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/optionSwitch3"
        android:layout_width="@dimen/width_switches"
        android:layout_height="@dimen/height_switches"
        android:layout_below="@+id/optionSwitch2"
        android:layout_marginTop="0dp"
        android:layout_centerHorizontal="true"
        android:text="@string/option_switch_text3" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/optionSwitch2"
        android:layout_width="@dimen/width_switches"
        android:layout_height="@dimen/height_switches"
        android:layout_below="@+id/optionSwitch1"
        android:layout_marginTop="0dp"
        android:layout_centerHorizontal="true"
        android:text="@string/option_switch_text2" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/optionSwitch1"
        android:layout_width="@dimen/width_switches"
        android:layout_height="@dimen/height_switches"
        android:layout_below="@+id/ImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/option_switch_text1" />

    <EditText
        android:id="@+id/PlainTextName"
        android:layout_width="@dimen/width_switches"
        android:layout_height="@dimen/height_switches"
        android:layout_below="@+id/optionSwitch4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:ems="10"

        android:inputType="textPersonName" />

    <Button
        android:id="@+id/SaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PlainTextName"
        android:layout_alignEnd="@+id/PlainTextName"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:text="Save" />

</RelativeLayout>